--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,60 @@
   background-color: red;
 }
 
+/* character bars */
+.charUI{
+  border:solid black 1px;
+  width:50%;
+  height: 20vh;
+  margin:auto;
+  display:flex;
+  flex-wrap:wrap;
+}
+.yourBars{
+  display: flex;
+  flex-wrap: wrap;
+  height: 20%;
+  width: 100%;
+}
+.hpHolderChar{
+  height:50%;
+  box-sizing: border-box;
+  width:50%;
+  background-color: darkred;
+}
+.hpChar{
+  height:100%;
+  width:100%;
+  background-color: red;
+}
+
+.mpHolderChar{
+  height:50%;
+  box-sizing: border-box;
+  width:50%;
+  background-color: purple;
+}
+.mpChar{
+  height:100%;
+  width:100%;
+  background-color: magenta;
+}
+
+.defHolderChar{
+  height:70%;
+  box-sizing: border-box;
+  width:100%;
+  background-color:transparent;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.def{
+  background: gray;
+  box-sizing: border-box;
+  width: 20%;
+
+}
 
 /* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
